# program_memory_segments

./: CMakeLists.txt  README.md  analyze_segments_linux.sh  analyze_segments_mingw.bat  analyze_segments_msvc.bat  main.cpp
.github/workflows/: cmake-multi-platform.yml
